Added bearer definition to the OpenAPI
